# vitanza-serverless

./: .gitignore  VitanzaServerless.sln  building functions.sh  vitanza-serverless.postman_collection.json
authenticate/: authenticate.vcxproj  main.cpp
common/: common.h  common.vcxproj
delete-item/: CMakeLists.txt  delete-item.vcxproj  main.cpp
get-item/: CMakeLists.txt  get-item.vcxproj  main.cpp
new-item/: CMakeLists.txt  main.cpp  new-item.vcxproj
preflight-response/: CMakeLists.txt  main.cpp  preflight-response.vcxproj
query-expression/: CMakeLists.txt  main.cpp  query-expression.vcxproj
test/: CMakeLists.txt  main.cpp  test.vcxproj
update-item/: CMakeLists.txt  main.cpp  update-item.vcxproj
